@@ -789,9 +789,9 @@ class VariableLengthKeyList : public BaseKeyList
 
     // Returns the threshold when switching from binary search to
     // linear search. For this layout we do not want to use any linear
-    // search, therefore return -1.
+    // search, therefore return 0.
     size_t get_linear_search_threshold() const {
-      return (0xffffffff);
+      return (0);
     }
 
     // Performs a linear search in a given range between |start| and
